--- a/templates/index.html
+++ b/templates/index.html
@@ -170,7 +170,7 @@
         </div>
         <br>
         <div class="row" style="text-align: center;">
-            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12" style="padding-left: 3vw; padding-right: 3vw;">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12 address">
                 <i class="fas fa-home colorify fa-3x" aria-hidden="true"></i>
                 <br>
                 <p>A-416 New Academic Block
