Added images, updated a bit.

--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -35,16 +35,16 @@
                     <a class="nav-link" href="../templates/index.html#about" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/research.html" >Research</a>
+                    <a class="nav-link" href="../templates/index.html#research" >Research</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../templates/index.html#contact" >Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/joinus.html">Join Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html#contact" >Contact</a>
+                    <a class="nav-link active" href="../templates/joinus.html">Join Us</a>
                 </li>
             </ul>
         </div>
@@ -73,9 +73,6 @@
                         Through our extensive research on material and technologies, we prototype manifestations of our
                         ideas, which we then iteratively improve. Our applied research approach interweaves basic
                         research with which we contribute to the advancement of the technologies we leverage.</p>
-                    <h3>Location</h3>
-                    <!--<a href="../templates/index.html#about">hello press here</a>-->
-                    <p>IIIT-Delhi</p>
                     <h3>Application Process</h3>
                     <p>
                     <ol>
