--- a/templates/research.html
+++ b/templates/research.html
@@ -31,16 +31,16 @@
                     <a class="nav-link" href="../templates/index.html#about" >About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/research.html" >Research</a>
+                    <a class="nav-link" href="../templates/index.html#research" >Research</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../templates/index.html#contact" >Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/team.html" >Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/joinus.html">Join Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html#contact" >Contact</a>
                 </li>
             </ul>
         </div>
@@ -66,7 +66,7 @@
                     <div class="row">
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
                             <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
-                                <div class="module">
+                                <div class="module" id="novel-interactions">
                                     <header>
                                         <h1>
                                             Novel Interactions with wearables and tangibles
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
                             <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
-                                <div class="module">
+                                <div class="module" id="mediated-reality">
                                     <header>
                                         <h1>
                                             Mediated Reality based toolkits & systems
@@ -99,7 +99,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
                             <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
-                                <div class="module">
+                                <div class="module" id="wearable-societal-good">
                                     <header>
                                         <h1>
                                             Wearables for societal good
@@ -114,7 +114,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
                             <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
-                                <div class="module">
+                                <div class="module" id="intelligent-agents">
                                     <header>
                                         <h1>
                                             Intelligent agents
@@ -129,7 +129,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-0">
                             <div class="card mx-auto researchcard padding-0" style="width: 100%; text-align: center; align: center;">
-                                <div class="module">
+                                <div class="module" id="animatronics">
                                     <header>
                                         <h1>
                                             Animatronics
