--- a/static/css/min.style.css
+++ b/static/css/min.style.css
@@ -34,13 +34,85 @@
     padding-bottom: 10px;
 }
 
-.module {
+#novel-interactions.module {
     background: linear-gradient(
             to bottom,
             rgba(0, 0, 0, 0),
-            rgba(0, 0, 0, 0.4)
+            rgba(0, 0, 0, 0.8)
     ),
-    url("../../static/placeholder.jpg");
+    url("../../static/research-img/novel-interaction-wearable-tangible.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: calc(200px + 0.5vw);
+    position: relative;
+    overflow: hidden;
+    /*object-fit: contain;*/
+    /*margin: 20px;*/
+}
+
+#wearable-societal-good.module {
+    background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.8)
+    ),
+    url("../../static/research-img/wearable-societal-good.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: calc(200px + 0.5vw);
+    position: relative;
+    overflow: hidden;
+    /*object-fit: contain;*/
+    /*margin: 20px;*/
+}
+
+#animatronics.module {
+    background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.8)
+    ),
+    url("../../static/research-img/animatronics.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: calc(200px + 0.5vw);
+    position: relative;
+    overflow: hidden;
+    /*object-fit: contain;*/
+    /*margin: 20px;*/
+}
+
+#mediated-reality.module {
+    background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.8)
+    ),
+    url("../../static/research-img/mediated-reality.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: calc(200px + 0.5vw);
+    position: relative;
+    overflow: hidden;
+    /*object-fit: contain;*/
+    /*margin: 20px;*/
+}
+
+#intelligent-agents.module {
+    background: linear-gradient(
+            to bottom,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.8)
+    ),
+    url("../../static/research-img/intelligent-agents.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -91,6 +163,10 @@
     color: #F5A623;
 }
 
+
+.active {
+    color: #F5A623 !important;
+}
 
 .projectName {
     margin-top: -10px;
@@ -161,14 +237,17 @@
 
 .memberType {
     margin-top: 6vw;
-    font-size: 1.5rem;
+    font-size: 1rem;
     font-family: 'Lato', sans-serif;
+    font-weight: 700;
 }
 
 .thumbnail {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    /*border-radius: 100%;*/
+    /*filter: grayscale(100%);*/
 }
 
 .card {
@@ -182,6 +261,7 @@
 .memberName {
     margin-top: -10px;
     font-family: 'Lato', sans-serif;
+    font-size: 1.2rem;
 }
 
 .memberField {
@@ -832,7 +912,7 @@ html * {
     color: rgb(0, 0, 0);
     margin-right: 2em;
     margin-left: 2em;
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     transition: 0.2s;
 }
 
