--- a/static/style.css
+++ b/static/style.css
@@ -22,7 +22,7 @@ body {
   color: white;
   margin-right: 2em;
   margin-left: 2em;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   transition: all 0.2s ease;
 }
 .navbar-dark .navbar-nav .nav-link:hover{
@@ -217,8 +217,8 @@ video {
   padding-top: 1.2em;
   padding-left: 0.2em;
   margin-bottom: 3rem;
-  font-size: calc(18px + 0.5vw);
-  width: 36vw;
+  font-size: calc(18px + 0.2vw);
+  width: 34vw;
   float: left;
   color: rgb(100, 100, 100);
 }
@@ -227,6 +227,7 @@ video {
   width: 40vw;
   height: auto;
   float: right;
+  margin-right: 1vw;
 }
 
 .research{
@@ -362,4 +363,8 @@ img{
 .address {
   padding-left: 3vw;
   padding-right: 3vw;
+}
+
+.mailer > a{
+  color: black;
 }
