--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     <!-- <script src="main.js"></script> -->
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#menu" >
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
         <a class="navbar-brand" href="#home"><img src="../static/logo.png" class="logo"></a>
@@ -41,16 +41,16 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/research.html">Research</a>
+                    <a class="nav-link" href="#research">Research</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/team.html">Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../templates/joinus.html">Join Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -181,12 +181,12 @@
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <i class="fas fa-phone colorify fa-3x" aria-hidden="true"></i>
                 <br>
-                <p>011-26907521</p>
+                <p class="mailer"><a href="tel:+911126907521">011-26907521</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 col-xs-12">
                 <i class="fas fa-envelope colorify fa-3x" aria-hidden="true"></i>
                 <br>
-                <p>weave-lab-admin@iiitd.ac.in</p>
+                <p class="mailer"><a href="mailto:weave-lab-admin@iiitd.ac.in">weave-lab-admin [at] iiitd [dot] ac [dot] in</a></p>
             </div>
 
         </div>
@@ -196,6 +196,8 @@
 
     </div>
 </section>
-
+    <!--<script>-->
+        <!--$('body').scrollspy({ target: '#menu' })-->
+    <!--</script>-->
 </body>
 </html>
