--- a/templates/team.html
+++ b/templates/team.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="../static/style.css">-->
     <link rel="stylesheet" href="../static/css/min.style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900" rel="stylesheet">
     <script src="../static/jquery-3.3.1.min.js"></script>
@@ -83,7 +82,9 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/amanparnami/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/AmanParnami.jpg" alt="..." class="thumbnail">
+                                       
                                     </div>
                                     <div class="card-body">
                                         <h5 class="card-title memberName"><b>Dr. Aman Parnami</b></h5>
@@ -104,6 +105,8 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/manideepa-mukherjee-798328179"><i class="fab fa-linkedin-in social"></i></a>
+                                        <!-- <a href="https://github.com/manideepam"><i class="fab fa-github socialAlt"></i></a> -->
                                         <img src="../static/images/ManideepaMukherjee.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -114,6 +117,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/manshulbelani/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/ManshulVBelani.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -134,6 +138,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/abhijeet-mishra-08bba269/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/AbhijeetMishra.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -145,6 +150,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/sana-naqvi-a060b86/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/SanaAliNaqvi.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -165,6 +171,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/piyushkumar186/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/PiyushKumar.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -176,6 +183,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/jatin-arora-2549a876"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/JatinArora.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -196,10 +204,11 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/suyashagarwal01/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/placeholder.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
-                                        <h5 class="card-title memberName"><strong>Deepak Aggrawal</strong></h5>
+                                        <h5 class="card-title memberName"><strong>Suyash Agarwal</strong></h5>
                                     </div>
 
                                 </div>
@@ -207,6 +216,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/namanm17/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/NamanMaheshwari.jpg " alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -227,6 +237,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/jaimahajan/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/JaiMahajan.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -238,6 +249,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center; align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/udbhava-kaul-1203bb179"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/UdbhavaKaul.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -248,6 +260,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/kartik9k/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/KartikMathur.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -258,6 +271,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/arpit-bhatia/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/ArpitBhatia.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -268,6 +282,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/manvi-goel-3485b8142/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/ManviGoel.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -278,6 +293,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/meetarora29/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/MeetArora.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -288,6 +304,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/aryan-saini-87011611a"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/AryanSaini.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -298,6 +315,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/nirmita-mehra-b96a81134/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/NirmitaMehra.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -308,6 +326,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/shwetankshrey"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/ShwetankShrey.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -318,6 +337,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/yajur-ahuja-35205b72/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/YajurAhuja.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -328,6 +348,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-xs-12">
                                 <div class="card mx-auto" style="width: 100%; text-align: center;">
                                     <div class="img-container">
+                                        <a href="https://www.linkedin.com/in/varnit-jain-6a0735142/"><i class="fab fa-linkedin-in social"></i></a>
                                         <img src="../static/images/VarnitJain.jpg" alt="..." class="thumbnail">
                                     </div>
                                     <div class="card-body">
@@ -343,5 +364,14 @@
         </div>
     </div>
 </section>
+
+<script> 
+    $(".hover").mouseleave(
+        function () {
+        $(this).removeClass("hover");
+        }
+    );
+</script>
+
 </body>
 </html>
