--- a/static/css/min.style.css
+++ b/static/css/min.style.css
@@ -232,6 +232,7 @@
     width: 200px;
     text-align: center;
     display: block;
+    background: black;
     margin: 0 auto;
 }
 
@@ -246,8 +247,48 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    -webkit-transition: all 0.35s ease-in-out;
+    transition: all 0.35s ease-in-out;
+    z-index: 1;
     /*border-radius: 100%;*/
     /*filter: grayscale(100%);*/
+}
+.social{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    font-size: 2rem;
+    color: white;
+    -webkit-transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 200ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    z-index: 3;
+}
+
+/* .socialAlt{
+    position: absolute;
+    top: 40%;
+    left: 60%;
+    font-size: 2rem;
+    color: white;
+    -webkit-transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(0);
+    transition: all 200ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    z-index: 3;
+} */
+
+.img-container:hover img,
+.img-container.hover img {
+  opacity: 0.5;
+  -webkit-filter: grayscale(70%);
+  filter: grayscale(70%);
+}
+
+.img-container:hover i,
+.img-container.hover i {
+    -webkit-transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(1);
+    transition: all 200ms 50ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .card {
@@ -341,7 +382,7 @@
 .creativeMindsSmallDiv{
     visibility: hidden;
 }
-
+ 
 .creativeMindsCenter {
     /*display: block;*/
     position: fixed;
