--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -13,7 +13,7 @@
     <script src="../static/jquery-3.3.1.min.js"></script>
     <script src="../static/popper.min.js"></script>
     <!--<script src="../static/js/main.js"></script>-->
-    <script src="../static/js/bootstrap.min.js" ></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 
 
 </head>
@@ -21,7 +21,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
         <a class="navbar-brand" href="../templates/index.html"><img src="../static/logo.png" class="logo"></a>
-        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <!-- <span class="navbar-toggler-icon"></span> -->
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -32,16 +33,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav  ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html#about" >About</a>
+                    <a class="nav-link" href="../templates/index.html#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html#research" >Research</a>
+                    <a class="nav-link" href="../templates/index.html#research">Research</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/index.html#contact" >Contact</a>
+                    <a class="nav-link" href="../templates/index.html#contact">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../templates/team.html" >Team</a>
+                    <a class="nav-link" href="../templates/team.html">Team</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active" href="../templates/joinus.html">Join Us</a>
@@ -68,11 +69,11 @@
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
                 <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
                     <h3>About</h3>
-                    <p>At Weave Lab we weave interactivity into everyday objects and experiences. We envision as well as
-                        discover through critical observations new opportunities for human-computer interactions.
-                        Through our extensive research on material and technologies, we prototype manifestations of our
-                        ideas, which we then iteratively improve. Our applied research approach interweaves basic
-                        research with which we contribute to the advancement of the technologies we leverage.</p>
+                    <p>At Weave, we are an interdisciplinary group of research maniacs who love to ideate, prototype,
+                        develop, evaluate and then CELEBRATE. We aim to become one of the most innovative tinkering
+                        labs in the world and are always looking for talented and motivated applicants to join us.
+                        <br>We welcome people from different backgrounds and give them the freedom to design innovative
+                        solutions to real-world problems. If you feel you have that edge, find the perfect position on this page!</p>
                     <h3>Application Process</h3>
                     <p>
                     <ol>
@@ -130,7 +131,9 @@
                         <p>
                             <strong>Deadline: </strong>Ongoing
                         </p>
-                        <a class="btn btn-outline-primary applybtn" href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Summer+Intern+(2019)" target="_blank">Apply
+                        <a class="btn btn-outline-primary applybtn"
+                           href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Summer+Intern+(2019)"
+                           target="_blank">Apply
                         </a>
                     </div>
                     <hr>
@@ -167,7 +170,9 @@
                         <p>
                             <strong>Deadline: </strong>Closed
                         </p>
-                            <a class="btn btn-outline-primary applybtn" href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Ph.D.+Student" target="_blank">Apply</a>
+                        <a class="btn btn-outline-primary applybtn"
+                           href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Ph.D.+Student"
+                           target="_blank">Apply</a>
                     </div>
                     <hr>
                     <div>
@@ -198,7 +203,9 @@
                         <p>
                             <strong>Deadline: </strong>January 7, 2019
                         </p>
-                            <a class="btn btn-outline-primary applybtn" href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Full+time+Research+Associate" target="_blank">Apply</a>
+                        <a class="btn btn-outline-primary applybtn"
+                           href="https://docs.google.com/forms/d/e/1FAIpQLSelK8x46AqFBdQuSHaBp8Xg4wAztY4Qc8UfENpmN4DGRxt4Ng/viewform?usp=pp_url&entry.1004353319=Full+time+Research+Associate"
+                           target="_blank">Apply</a>
                     </div>
 
                 </div>
