--- a/static/css/min.style.css
+++ b/static/css/min.style.css
@@ -30,6 +30,18 @@
 
 }
 
+.bg_project {
+    position: relative;
+    display: flex;
+    overflow: hidden;
+    margin: 0;
+    min-height: 100%;
+    min-width: 100%;
+    object-fit: contain;
+    height:100vh;
+    /*background-color:black;*/
+}
+
 .researchcard {
     width: 100% !important;
     height: 150%;
