--- a/templates/index.html
+++ b/templates/index.html
@@ -128,11 +128,11 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
-                    <a href="#">
+                    <a href="./projects/gehna.html">
                         <img src="../static/img_1600_1024.jpg" alt="lego"/>
                     </a>
                     <h4><em>Research Topic</em></h4>
-                    <h3>Project topic</h3>
+                    <h3>Gehna</h3>
                 </div>
                 <div class="col-sm-6 col-lg-6 col-md-6 re_img">
                     <a href="#">
